# maximus

./: .clang-format  .gitignore  AUTOMATION_SUMMARY.md  CLAUDE.md  CMAKE_MIGRATION.md  CMakeLists.txt  CONTRIBUTING.md  HACKING.md  MODERNIZATION_PROGRESS.md  README.md  codecheck.sh  configure  cppcheck_slib.txt  fix_max_includes.sh  vars.mk  vars.mk.configure  vars_local.mk
btree/: CMakeLists.txt  bbuf.cc  bbuf.h  blkio.h  blkiobuf.cc  blkiobuf.h  btnode.h  btree.h  btreec.h  btreep.h  btype.h  dbase.cc  dbase.h  dbasec.h  dllc.c  palist.h  track.cc  track.h  trackc.h  trackcom.h
cmake/: CreateUserDB.cmake.in  Reconfig.cmake.in  compiler_details.h.in  version.h.in
comdll/: CMakeLists.txt  fdcomm.c  ipcomm.c  ntcomm.c  pdclient.c  pdclient.h  telnet.h
configuration-tests/: endian.c  stamp_combo.c
install/: arc.c  dearc.c  decode.c  huf.c  maketbl.c  wdearc.c
lang/: english.ltf  english.lth  rdlang.c
max/: CMakeLists.txt  api_brop.h  api_brow.c  api_brow.h  areadat.h  async.c  asyncnt.c  atexit.c  caller.h  callinfo.c  colour.h  cppmain.cc  date.c  debug.c  disp_dat.c  disp_max.c  disp_mis.c  disp_qu.c  display.c  display.h  displayp.h  emsi.c  emsip.h  events.c  events.h  eventsp.h  exec.h  f_area.c  f_con.c  f_con.h  f_down.c  f_down.h  f_hurl.c  f_idx.c  f_idx.h  f_intrin.c  f_isval.c  f_kill.c  f_locate.c  f_logup.c  (+187 more)
maxblast/: maxblast.h  play.c  play.h  voc_file.c  voc_snd.h
mcp/: maxstart.c  mcp.c  mcp_int.h
mex/: CMakeLists.txt  mex.h  mex_lex.c  mex_prot.h  mex_symt.c  mex_tab.c  mex_tab.h  mex_tab.y  sem_expr.c  sem_flow.c  sem_func.c  sem_goto.c  sem_scop.c  sem_vm.c  vm_dll.c  vm_opflo.c  vm_opfun.c  vm_opstk.c  vm_opstr.c  vm_read.c  vm_run.c  vm_symt.c
msgapi/: CMakeLists.txt  api_sdm.c  api_sdm.h  api_sdmp.h  api_sq.h  apidebug.h  bld.c  bld.h  msgapi.h  putword.h  sq_area.c  sq_misc.c  sq_read.c  sq_uid.c  sq_write.c  structrw.c
prot/: CMakeLists.txt  frecv.c  pdatap.h  rbsb.c  zm.c  zmodem.h  zsjd.h
rexx/: expimp.c  maxapis.h  maxuapi.c  misc.c  rexx.c
scripts/: analyze_errors.sh  auto_modernize.sh  find_missing_forward_decls.sh  fix_headers.py  generate_forward_decls.py
slib/: CMakeLists.txt  _ctype.c  acomp.c  address.c  align.c  aname.c  arc.h  arc_def.h  arcmatch.c  arcmatch.h  areaapi.c  areaapi.h  bfile.c  bfile.h  brktrap.c  c2s.c  canon.c  compiler.h  compiler_align.h  compiler_details.h  compiler_unix.h  comqueue.h  crc.h  crit.c  cshopen.c  cvtdate.c  date2bin.c  dmalloc.c  dmalloc.h  dmpvt.h  dosdate.c  dv_puts.c  dv_scrl.c  ebcidic.c  encode.h  fd2n.c  fexist.c  ffind.c  ffind.h  ffname.c  (+76 more)
sm/: msg.h
squish/: CMakeLists.txt  bld.c  bld.h  killrcat.c  msgtrack.c  s_config.c  s_dupe.c  s_dupe.h  s_hole.c  s_hole.h  s_link.c  s_link.h  s_match.c  s_match.h  s_misc.c  s_pack.c  s_pack.h  s_scan.c  s_scan.h  s_sflo.c  s_squash.c  s_squash.h  s_stat.c  s_toss.c  s_toss.h  sqconv  sqfeat.h  sqfix  sqfix.c  sqfix.h  sqinfo  sqinfo.c  sqpack  sqpack.c  sqpack.h  sqreidx  sqreidx.c  sqset  sqstat.h  squish  (+6 more)
src/btree/: audit.c  bbuf.cc  bbuf.h  blkio.cc  blkio.h  blkiobuf.cc  blkiobuf.h  bt_ins.cc  bt_look.cc  bt_lookr.cc  bt_open.cc  bt_rem.cc  btnode.cc  btnode.h  btree.cc  btree.h  btreec.cc  btreec.h  btreep.h  bttest.cc  btype.h  cppmain.cc  dbase.cc  dbase.h  dbasec.cc  dbasec.h  dllc.c  palist.cc  palist.h  track.cc  track.h  trackc.h  trackcom.h  trackexp.cc  trackimp.cc
src/comdll/: fdcomm.c  ipcomm.c  ntcomm.c  ntcommdl.c  ntlisten.c  pdclient.c  pdclient.h  telnet.h
src/install/: ar.c  ar.h  arc.c  arc.h  cvt202.c  cvt202.h  dearc.c  decode.c  encode.c  huf.c  install.c  install.h  maketbl.c  maketree.c  wdearc.c  wdearc.h  wio.c
src/max/: api_brop.h  api_brow.c  api_brow.h  areadat.h  async.c  asyncnt.c  atexit.c  bldupd.h  caller.h  callinfo.c  callinfo.h  colour.h  date.c  debug.c  disp_dat.c  disp_max.c  disp_mis.c  disp_qu.c  display.c  display.h  displayp.h  dos.c  emsi.c  emsi.h  emsip.h  events.c  events.h  eventsp.h  exec.h  f_area.c  f_con.c  f_down.c  f_down.h  f_hurl.c  f_idx.c  f_idx.h  f_intrin.c  f_isval.c  f_kill.c  f_locate.c  (+206 more)
src/maxblast/: voc_data.h  voc_file.h  voc_snd.c
src/mcp/: maxend.c  maxshow.c  mcp_cli.c  mcp_dll.c  mcp_log.c  mcp_max.c
src/mex/: mex.h  mex_err.c  mex_err.h  mex_glob.h  mex_lex.c  mex_lex.h  mex_lexp.h  mex_main.c  mex_misc.c  mex_prot.h  mex_symt.c  sem_decl.c  sem_expr.c  sem_flow.c  sem_func.c  sem_gen.c  sem_goto.c  sem_scop.c  sem_vm.c  vm.h  vm_dll.c  vm_heap.c  vm_ifc.h  vm_op.h  vm_opcvt.c  vm_opflo.c  vm_opfun.c  vm_opmth.c  vm_opstk.c  vm_opstr.c  vm_read.c  vm_run.c  vm_symt.c
src/msgapi/: api_sdm.c  api_sdm.h  api_sdmp.h  api_sq.h  apidebug.h  bld.c  bld.h  msgapi.c  msgapi.h  putword.c  putword.h  shell.c  sq_area.c  sq_help.c  sq_idx.c  sq_kill.c  sq_lock.c  sq_misc.c  sq_msg.c  sq_read.c  sq_uid.c  sq_write.c  structrw.c
src/prot/: frecv.c  fsend.c  pdata.c  pdata.h  pdatap.h  rbsb.c  rz.c  sz.c  xmodem.h  zm.c  zmodem.h  zsjd.h
src/slib/: 1stchar.c  acomp.c  address.c  adj_user.c  alc.h  align.c  aname.c  any2dec.c  arc.h  arc_cmd.c  arc_def.c  arc_def.h  arcmatch.c  arcmatch.h  areaapi.c  areaapi.h  avatar.c  bfile.c  bfile.h  bind.c  bprintf.c  brktrap.c  c2s.c  canon.c  cencode.c  comm.h  compiler.h  compiler_align.h  compiler_details.h  compiler_unix.h  comqueue.h  coreleft.c  crc.h  crc16.c  crc32.c  crcfile.c  crep.c  crit.c  cshopen.c  cstrupr.c  (+147 more)
src/sm/: msg.h  sm.c  sm.h  sm_msg.c  sm_th.c  sm_view.c  smrc.h
src/squish/: apidebug.h  bld.c  bld.h  (+47 more)
swap/: swap.h  swaptest.c
swap2/: compat.h
ui/: tui.c  tui.h  tui_dlg.c  tui_dlg.h  tui_list.c  tui_mous.c  tui_pm.c  tui_pm.h  tui_win.c
unix/: CMakeLists.txt  dosio.c  dossem.c  process.c  wincomm.c  winstr.c
unix/include/: compat.h  conio.h  dosproc.h  dossem.h  io.h  process.h  share.h  viocurses.h  wincomm.h  winstr.h
util/: CMakeLists.txt  Makefile  accem.c  ansi2bbs.c  cvt_misc.c  cvtusr.h  fb.c  fbp.h  maid  maid.c  maid.h  mecca.c  mecca.h  mr.h  piper.c  s_access.c  s_colour.c  s_heap.h  s_marea.c  s_misc.c  s_parse.c  s_proto.c  s_sessio.c  scanbld.c  silt.h  siltprot.h
(+86 files in other folders)
